# calkit

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  404.html  AGENTS.md  CITATION.cff  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  calkit.yaml  conftest.py  flake.nix  index.html  install.json  jest.config.js  mkdocs.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json
.claude-plugin/: marketplace.json
.dvc/: config
.github/workflows/: docs.yml  format.yml  publish-test.yml  publish-vscode-ext.yml  publish.yml  test.yml
acknowledgements/: index.html
agent-plugin/: marketplace.json
agent-plugin/.claude-plugin/: plugin.json
agent-plugin/agents/: AGENTS.md
ai-tools/: index.html
apps/: index.html
assistant/: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml
calculations/: index.html
calkit/: __init__.py  __main__.py  calc.py  check.py  check_literals.py  cli.py  client.py  cloud.py  conda.py  config.py  core.py  data.py  datasets.py  dependencies.py  detect.py  docker.py  dvc.py  environments.py  excel_chart_to_png.jxa  fs.py  git.py  github.py  gui.py  install.py  invenio.py  julia.py  jupyter.py  licenses.py  magics.py  matlab.py  models.py  notebooks.py  office.py  operator.py  ops.py  overleaf.py  pipeline.py  releases.py  server.py  ssh.py  (+2 more)
calkit-yaml/: index.html
calkit/cli/: __init__.py  check.py  cloud.py  config.py  core.py  delete.py  describe.py  dev.py  import_.py  latex.py  list.py  main.py  new.py  notebooks.py  office.py  overleaf.py  pbs.py  sched.py  scheduler.py  slurm.py  sync.py  update.py
calkit/dvc/: __init__.py  core.py  zip.py
calkit/gui/: main.py
calkit/jupyterlab/: routes.py
calkit/models/: __init__.py  core.py  environments.py  io.py  iteration.py  pipeline.py
calkit/templates/: core.py
calkit/tests/: conftest.py  test_calc.py  test_check.py  test_check_literals.py  test_cloud.py  test_conda.py  test_core.py  test_dependencies.py  test_detect.py  test_docker.py  test_dvc.py  test_environments.py  test_fs.py  test_git.py  test_install.py  test_invenio.py  test_julia.py  test_jupyter.py  test_licenses.py  test_magics.py  test_matlab.py  test_notebooks.py  test_pipeline.py  test_releases.py  test_templates.py  test_zips.py
cli-reference/: index.html
cloud-integration/: index.html
datasets/: index.html
dependencies/: index.html
docs/: acknowledgements.md  ai-tools.md  apps.md  calculations.md  calkit-yaml.md  cli-reference.md  cloud-integration.md  datasets.md  dependencies.md  environments.md  examples.md  governance.md  help.md  hpc.md  index.md  installation.md  jupyterlab.md  local-server.md  notebooks.md  overleaf.md  pipeline.md  questions.md  quickstart.md  references.md  releases.md  reproducibility.md  subprojects.md  version-control.md
docs/pipeline/: index.md  manual-steps.md  running-and-logging.md  slurm.md
docs/tutorials/: adding-latex-pub-docker.md  ai-agents.md  conda-envs.md  existing-project.md  first-project.md  github-actions.md  index.md  jupyterlab.md  latex-codespaces.md  matlab.md  notebook-pipeline.md  office.md  openfoam.md  procedures.md  vscode-slurm-notebook.md
environments/: index.html
examples/: index.html
examples/cfd-study/: README.md  calkit.yaml  knoki.yaml  notebook.ipynb
examples/ms-office/: .gitignore  README.md  calkit.yaml
governance/: index.html
help/: index.html
hpc/: index.html
installation/: index.html
jupyterlab/: index.html
jupyterlab-ext/: install.json  jest.config.js  package.json
jupyterlab-ext/schema/: plugin.json
jupyterlab-ext/src/: calkit-config.ts  feature-flags.ts  index.ts  io-tracker.ts  queryClient.ts
jupyterlab-ext/style/: base.css  cell-output-marker.css  environment-editor.css  index.css  notebook-toolbar.css  pipeline-status-bar.css  sidebar.css
knocc/: cli.py  client.py  config.py
local-server/: index.html
notebooks/: index.html
overleaf/: index.html
pipeline/: index.html
pipeline/manual-steps/: index.html
pipeline/running-and-logging/: index.html
pipeline/slurm/: index.html
questions/: index.html
quickstart/: index.html
references/: index.html
releases/: index.html
reproducibility/: index.html
schema/: plugin.json
scripts/: genclient.py  generate-cli-reference.py  generate-docs-references.py  install.ps1  install.sh  make-calk9.sh  sync-docs.py
search/: search_index.json
src/: calkit-config.ts  cell-output-marker.ts  commit-dialog.tsx  environment-editor.tsx  environment-selector.tsx  feature-flags.ts  file-browser-menu.ts  icons.ts  index.ts  launcher-filter.ts  notebook-registration.tsx  notebook-toolbar.tsx  pipeline-state.ts  project-info-editor.tsx  request.ts  shims-mainmenu.d.ts  sidebar.tsx
src/__tests__/: calkit.spec.ts  useQueries.spec.ts
src/components/: commit-dialog.tsx  environment-editor.tsx  notebook-registration.tsx  notebook-toolbar.tsx  pipeline-status-bar.tsx  project-info-editor.tsx  sidebar-settings.tsx  sidebar.tsx  stage-editor.tsx
src/hooks/: useQueries.ts
style/: environment-editor.css  environment-selector.css  index.css  notebook-toolbar.css  sidebar.css
subprojects/: index.html
test/: dvc.yaml  matlab_child.m  matlab_parent.m  nb-julia.ipynb  nb-params.ipynb  nb-subdir.ipynb  pipeline.ipynb  script.py
test/dvc-md5-dir/: osx-arm64.txt
tutorials/: index.html
tutorials/adding-latex-pub-docker/: index.html
tutorials/ai-agents/: index.html
tutorials/conda-envs/: index.html
tutorials/existing-project/: index.html
tutorials/first-project/: index.html
tutorials/github-actions/: index.html
tutorials/jupyterlab/: index.html
tutorials/latex-codespaces/: index.html
tutorials/matlab/: index.html
tutorials/notebook-pipeline/: index.html
tutorials/office/: index.html
tutorials/openfoam/: index.html
ui-tests/: .gitignore  package.json  playwright.config.js
version-control/: index.html
vscode-ext/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
vscode-ext/src/: extension.ts  (+5 more)
(+62 files in other folders)
