[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "Pete Bachant", email = "petebachant@gmail.com"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "arithmeval",
  "bibtexparser",
  "checksumdir",
  "docx2pdf",
  "dvc>=3.59.0",
  "eval-type-backport; python_version < '3.10'",
  "fastapi",
  "gitpython",
  "keyring",
  "nbconvert",
  "pillow",
  "pydantic[email]",
  "pydantic-settings",
  "pyjwt",
  "python-dotenv>=1",
  "pywin32; platform_system == 'Windows'",
  "requests",
  "typer",
  "uvicorn",
]
description = "Reproducibility simplified."
dynamic = ["version"]
name = "calkit-python"
readme = "README.md"
requires-python = ">=3.9"

[project.optional-dependencies]
data = [
  "pandas>=2.2.3",
  "polars>=1.18.0",
]

[dependency-groups]
dev = [
  "ipykernel",
  "jupyter",
  "kaleido==0.2.1",
  "numpy",
  "pandas>=2.2.3",
  "plotly",
  "pyarrow",
  "pytest",
  "pytest-test-utils", # For tmp_dir fixture
  "mkdocs",
  "mkdocs-material",
  "mkdocs-mermaid2-plugin",
]

[project.urls]
Homepage = "https://calkit.org"
Issues = "https://github.com/calkit/calkit/issues"
Repository = "https://github.com/calkit/calkit"

[project.scripts]
calkit = "calkit.cli:run"

[tool.hatch.build.targets.wheel]
packages = ["calkit"]

[tool.hatch.version]
path = "calkit/__init__.py"
