[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "Pete Bachant", email = "petebachant@gmail.com"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "arithmeval",
  "bibtexparser",
  "checksumdir",
  "docx2pdf",
  "dvc>=3.59.0",
  "fastapi",
  "gitpython",
  "keyring",
  "nbconvert",
  "pillow",
  "pydantic[email]",
  "pydantic-settings",
  "pyjwt",
  "python-dotenv>=1",
  "pywin32; platform_system == 'Windows'",
  "requests",
  "typer",
  "uvicorn",
  "tqdm>=4.67.1",
]
description = "Reproducibility simplified."
dynamic = ["version"]
name = "calkit-python"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
data = [
  "pandas>=2.2.3",
  "polars>=1.18.0",
]

[dependency-groups]
dev = [
  "deptry>=0.22.0",
  "ipykernel",
  "jupyter",
  "kaleido==0.2.1",
  "numpy",
  "pandas>=2.2.3",
  "polars>=1.18.0",
  "plotly",
  "pre-commit",
  "pyarrow",
  "pytest",
  "pytest-cov",
  "pytest-test-utils", # For tmp_dir fixture
  "mkdocs",
  "mkdocs-material",
  "mkdocs-mermaid2-plugin",
  "pytest-env>=1.1.5",
]

[project.urls]
Homepage = "https://calkit.org"
Issues = "https://github.com/calkit/calkit/issues"
Repository = "https://github.com/calkit/calkit"

[project.scripts]
calkit = "calkit.cli:run"

[tool.hatch.build.targets.wheel]
packages = ["calkit"]

[tool.hatch.version]
path = "calkit/__init__.py"

[tool.mypy]
files = ["calkit"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.ruff]
target-version = "py310"
line-length = 79
fix = true
extend-select = ["I"]

[tool.pytest.ini_options]
env = ["CALKIT_ENV = test"]
