[build-system]
requires = [
  "hatchling>=1.5.0",
  "jupyterlab>=4.0.0,<5",
  "hatch-nodejs-version>=0.3.2",
]
build-backend = "hatchling.build"

[project]
authors = [{ name = "Pete Bachant", email = "petebachant@gmail.com" }]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Framework :: Jupyter",
  "Framework :: Jupyter :: JupyterLab",
  "Framework :: Jupyter :: JupyterLab :: 4",
  "Framework :: Jupyter :: JupyterLab :: Extensions",
  "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
]
dependencies = [
  "arithmeval",
  "bibtexparser",
  "checksumdir",
  "docx2pdf",
  "dvc==3.64.2",
  "fastapi",
  "gitpython",
  "keyring",
  "nbconvert",
  "pathspec<1.0.0",
  "pillow",
  "pydantic[email]",
  "pydantic-settings",
  "pyjwt",
  "python-dotenv>=1",
  "pywin32; platform_system == 'Windows'",
  "requests",
  "typer==0.21.1",
  "uvicorn",
  "tqdm>=4.67.1",
  "psutil>=7.0.0",
  "papermill>=2.6.0",
  "jupyterlab>=4.4.5",
  "sqlitedict>=2.1.0",
  "json2latex>=0.0.3",
]
description = "Reproducibility simplified."
dynamic = ["version"]
name = "calkit-python"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
data = ["pandas>=2.2.3", "polars>=1.18.0"]

[dependency-groups]
dev = [
  "deptry>=0.22.0",
  "ipykernel",
  "kaleido==0.2.1",
  "numpy",
  "pandas>=2.2.3",
  "polars>=1.36.1",
  "plotly",
  "pre-commit",
  "pyarrow",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-test-utils",             # For tmp_dir fixture
  "pytest-jupyter[server]>=0.6.0",
  "mkdocs",
  "mkdocs-material",
  "mkdocs-mermaid2-plugin",
  "pytest-env>=1.1.5",
  "pytest-xdist>=3.8.0",
  "pypdf>=6.4.2",
  "mkdocs-glightbox>=0.5.2",
]

[project.urls]
Homepage = "https://calkit.org"
Issues = "https://github.com/calkit/calkit/issues"
Repository = "https://github.com/calkit/calkit"

[project.scripts]
calkit = "calkit.cli:run"
calk9 = "calkit.cli:run"

[tool.hatch.build.targets.wheel]
packages = ["calkit"]

[tool.hatch.build.targets.sdist]
artifacts = ["calkit/labextension"]
exclude = [".github"]

[tool.hatch.build.targets.wheel.shared-data]
"calkit/labextension" = "share/jupyter/labextensions/calkit"
"install.json" = "share/jupyter/labextensions/calkit/install.json"
"jupyter-config/server-config" = "etc/jupyter/jupyter_server_config.d"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
  "calkit/labextension/static/style.js",
  "calkit/labextension/package.json",
]
skip-if-exists = ["calkit/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "calkit/labextension"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[tool.jupyter-releaser.hooks]
before-build-npm = [
  "python -m pip install 'jupyterlab>=4.0.0,<5'",
  "jlpm",
  "jlpm build:prod",
]
before-build-python = ["jlpm clean:all"]

[tool.check-wheel-contents]
ignore = ["W002"]

[tool.hatch.version]
path = "calkit/__init__.py"

[tool.mypy]
files = ["calkit"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.ruff]
target-version = "py310"
line-length = 79
fix = true
lint.extend-select = ["I"]

[tool.pytest.ini_options]
env = ["CALKIT_ENV=test", "CALKIT_TEST_OVERLEAF_TOKEN=none"]
addopts = "-n auto"
